force-app/main/default/objects/Address_Delivery_Location__mdt/Address_Delivery_Location__mdt.object-meta.xml
<CustomObject>
    <label>AddressDeliveryLocation</label>
    <pluralLabel>AddressesDeliveryLocations</pluralLabel>
</CustomObject>