force-app/main/default/objects/Address_Delivery_Location__mdt/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>