force-app/main/default/objects/Address_Delivery_Location__mdt/fields/DeliveryLocation__c.field-meta.xml
<CustomField>
    <fullName>DeliveryLocation__c</fullName>
    <label>DeliveryLocation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>