force-app/main/default/objects/Address_Delivery_Location__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Address__c</columns>
    <columns>DeliveryLocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>